[package]
name = "wget"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "stream"] }
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.16"
chrono = "0.4"
scraper = "0.12"
futures = "0.3"  
url = "2"
regex = "1"